MPlayer (1.0)

  rc5:

    Decoders:
    * FFmpeg AAC decoder is now preferred over libfaad2 and the internal
      libfaad2 forked copy has been removed in its favor

    Demuxers:
    * experimental support for using binary Quicktime codecs with -demuxer lavf.

    Filters:
    * delogo: allow to change the rectangle based on the time.

    Other:
    * experimental support for PGS (BluRay-compatible), DVB and XSUB subtitles.
    * experimental af_cmdline slave command to change e.g. audio equalizer options at runtime.

    MEncoder:
    * -force-key-frames option to set explicit seek points.

  rc4: "Yes We Can"

    GUI: Changes towards removing the GUI
    * The GUI will no longer display any error or warning messages.
    * Special GUI slave commands (gui_*) were removed, along with
      the related key bindings.

    Decoders:
    * YUY2 Lossless Codec (YLC0) via binary DLL
    * Truemotion RT codec (TR20) via binary DLL
    * Nogantech Codec (NTN1 and NTN2) via binary DLL
    * add new FourCCs (m1v1, yuvs, VYUY, Y42B, V422, YUNV, UYNV, UYNY, uyv1,
      2Vu1, P422, HDYC, IJLV, MVJP)
      TwoCCs (0xA106, 0x6c75, 0xAAC0, 0x55005354)
      to existing decoders
    * AMR now handled via OpenCORE decoder
    * updated Windows Media Screen Codec (MSS1, MSS2) via binary DLL
    * CoreAVC H.264 decoder via binary DLL (Windows only)
    * Kega Game video codec (KGV1) via binary DLL
    * SoftLab-NSK Forward MPEG-2 I-frames (SLIF) via binary DLL
    * JPEG 2000 support via OpenJPEG
    * internal liba52 copy removed
    * CineForm HD (CFHD) via binary DLL
    * VP8 en-/decoding through libvpx wrapper and native decoder in FFmpeg
    * support for external libmpeg2 added
    * hardware MPEG decoder priority lowered
    * external libmpg123 support

    Demuxers:
    * Mostly fixed timing issues with some H.264 (PAFF) samples
    * Matroska and Ogg demuxers switched to use libavformat by default.